--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
     <link rel="stylesheet" href="css/main.css"/>
     <link rel="stylesheet" href="css/mobile.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h>Amelia & Timber's Wedding!</h>
+    <div class="page-container">
+        <h1 class="center-text">Amelia & Timber's Wedding!</h1>
+        <img class="title-img" src="img/Amelia-Timber.JPG" alt="Amelia & Timber at their favorite neighborhood restaurant"/>
+        <h2 class="center-text">July 13, 2025, 3-8 pm</h2>
+        <h2 class="center-text">Michelle's Ballroom</h2>
+        <h3 class="center-text">2800 W Belmont Ave, Chicago, IL 60618</h3>
+    </div>
 </body>
 </html>
