Add nav buttons to homepage, placeholder mobile css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Amelia & Timber's Wedding!</title>
+    <title>Amelia & Timber's Gay Wedding!</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="css/reset.css"/>
@@ -13,11 +13,30 @@
 </head>
 <body>
     <div class="page-container">
-        <h1 class="center-text">Amelia & Timber's Wedding!</h1>
+        <h1 class="center-text">Amelia & Timber's Gay Wedding!</h1>
         <img class="title-img" src="img/Amelia-Timber.JPG" alt="Amelia & Timber at their favorite neighborhood restaurant"/>
         <h2 class="center-text">July 13, 2025, 3-8 pm</h2>
         <h2 class="center-text">Michelle's Ballroom</h2>
         <h3 class="center-text">2800 W Belmont Ave, Chicago, IL 60618</h3>
+
+        <div class="spacer"></div>
+
+        <p class="center-text">
+            <ul class="horizontal">
+                <li>
+                 <a class="btn" href="faq/index.html">FAQ</a>
+                </li>
+             <li>
+                 <a class="btn" href="schedule/index.html">Schedule</a>
+             </li>
+             <li>
+                <a class="btn" href="gallery/index.html">Gallery</a>
+            </li>
+            <li>
+                 <a class="btn" href="https://www.myregistry.com/wedding-registry/amelia-chaltin-and-timber-rodriguez-chicago-il/4353870" target="_blank">Registry</a>
+            </li>
+            </ul>
+         </p>
     </div>
 </body>
 </html>
