--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Amelia & Timber's Gay Wedding!</title>
+    <title>T&A's Gay Wedding!</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="css/reset.css"/>
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="page-container">
-        <h1 class="center-text">Amelia & Timber's Gay Wedding!</h1>
+        <img class="logo-img" src="img/logo.png"/>
         <img class="title-img" src="img/Amelia-Timber.JPG" alt="Amelia & Timber at their favorite neighborhood restaurant"/>
         <h2 class="center-text">July 13, 2025, 3-8 pm</h2>
         <h2 class="center-text">Michelle's Ballroom</h2>
@@ -31,6 +31,9 @@
              </li>
              <li>
                 <a class="btn" href="gallery/index.html">Gallery</a>
+            </li>
+            <li>
+                <a class="btn" href="rsvp/index.html">RSVP</a>
             </li>
             <li>
                  <a class="btn" href="https://www.myregistry.com/wedding-registry/amelia-chaltin-and-timber-rodriguez-chicago-il/4353870" target="_blank">Registry</a>
