First pass gallery

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -37,7 +37,29 @@
 
     <div class="spacer"></div>
 
-    <img src="../img/Amelia-Timber.JPG"/>
+    <img class="column" src="../img/Dancing-1.JPG" alt="Timber & Amelia dancing at Joy & Bridget's wedding"/>
+    <img class="column" src="../img/Dancing-2.JPG" alt="Timber & Amelia dancing at Joy & Bridget's wedding"/>
+
+    <div class="spacer"></div>
+
+    <img class="column" src="../img/Concert.JPG" alt="Amelia & Timber out at a concert"/>
+    <img class="column" src="../img/First-Day-House.jpg"/>
+
+    <div class="spacer"></div>
+
+    <img class="col-3" src="../img/Christmas-1.JPG" alt="Timber & Amelia hosting their Christmas party"/>
+    <img class="col-3" src="../img/Christmas-2.JPG" alt="Timber & Amelia hosting their Christmas party"/>
+    <img class="col-3" src="../img/Christmas-3.JPG" alt="Timber & Amelia hosting their Christmas party"/>
+
+    <div class="spacer"></div>
+
+    <img class="column" src="../img/Winter-1.JPG" alt="Amelia & Timber at Christkindlmarket"/>
+    <img class="column" src="../img/Winter-2.JPG" alt="Amelia & Timber at Christkindlmarket with Paul"/>
+
+    <div class="spacer"></div>
+
+    <img class="column" src="../img/Halloween-1.jpg" alt="Timber & Amelia as Princess Daisy & Princess Peach for Halloween"/>
+    <img class="column" src="../img/Halloween-2.jpg" alt="Timber & Amelia as Princess Daisy & Princess Peach for Halloween"/>
 
    </div>
 </body>
