Remove wedding photos, update page titles & faq

--- a/faq/index.html
+++ b/faq/index.html
@@ -20,8 +20,11 @@
     <h3 class="center-text">Where can I park?</h3>
     <p class="center-text">The venue has parking.</p>
     <div class="spacer"></div>
-    <h3 class="center-text">Can I bring my kids/partners?</h3>
-    <p class="center-text">Unfortunately we cannot accomodate kids or plus ones. All invitees are listed on your invite.</p>
+    <h3 class="center-text">Can I bring my kids?</h3>
+    <p class="center-text">Our wedding will not be a child-friendly event. While we understand that may prevent some people from coming, we are not willing to censor ourselves and don't feel it will be appropriate for children to attend.</p>
+    <div class="spacer"></div>
+    <h3 class="center-text">Can I bring my partner/a date?</h3>
+    <p class="center-text">Unfortunately, we cannot accomodate plus ones. All invitees are listed on your invite.</p>
     <div class="spacer"></div>
     <h3 class="center-text">Can you accomodate dietary restrictions?</h3>
     <p class="center-text">Please indicate your dietary restrictions in the RSVP form and we will make sure you can eat!</p>
