--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>FAQ | T&A's Gay Wedding</title>
+    <title>Gallery | T&A's Gay Wedding</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="../css/reset.css"/>
@@ -37,8 +37,8 @@
 
     <div class="spacer"></div>
 
-    <img class="column" src="../img/Dancing-1.JPG" alt="Timber & Amelia dancing at Joy & Bridget's wedding"/>
-    <img class="column" src="../img/Dancing-2.JPG" alt="Timber & Amelia dancing at Joy & Bridget's wedding"/>
+    <img class="column" src="../img/Winter-1.JPG" alt="Amelia & Timber at Christkindlmarket"/>
+    <img class="column" src="../img/Winter-2.JPG" alt="Amelia & Timber at Christkindlmarket with Paul"/>
 
     <img class="column" src="../img/Concert.JPG" alt="Amelia & Timber out at a concert"/>
     <img class="column" src="../img/First-Day-House.jpg" alt="Timber & Amelia's condo on the day they moved in"/>
@@ -46,9 +46,6 @@
     <img class="col-3" src="../img/Christmas-1.JPG" alt="Timber & Amelia hosting their Christmas party"/>
     <img class="col-3" src="../img/Christmas-2.JPG" alt="Timber & Amelia hosting their Christmas party"/>
     <img class="col-3" src="../img/Christmas-3.JPG" alt="Timber & Amelia hosting their Christmas party"/>
-
-    <img class="column" src="../img/Winter-1.JPG" alt="Amelia & Timber at Christkindlmarket"/>
-    <img class="column" src="../img/Winter-2.JPG" alt="Amelia & Timber at Christkindlmarket with Paul"/>
 
     <img class="column" src="../img/Halloween-1.jpg" alt="Timber & Amelia as Princess Daisy & Princess Peach for Halloween"/>
     <img class="column" src="../img/Halloween-2.jpg" alt="Timber & Amelia as Princess Daisy & Princess Peach for Halloween"/>
