--- a/schedule/index.html
+++ b/schedule/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>FAQ | T&A's Gay Wedding</title>
+    <title>Schedule | T&A's Gay Wedding</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="../css/reset.css"/>
