Update venue, add a photo

--- a/faq/index.html
+++ b/faq/index.html
@@ -14,48 +14,69 @@
 <body>
    <div class="page-container">
     <h1 class="center-text">FAQ</h1>
+    <div class="spacer"></div>
+
+    <p class="center-text">
+        <ul class="horizontal">
+            <li>
+             <a class="btn" href="../index.html">Home</a>
+            </li>
+         <li>
+             <a class="btn" href="../schedule/index.html">Schedule</a>
+         </li>
+         <li>
+            <a class="btn" href="../gallery/index.html">Gallery</a>
+        </li>
+        <li>
+            <a class="btn" href="../rsvp/index.html">RSVP</a>
+        </li>
+        <li>
+             <a class="btn" href="https://www.myregistry.com/wedding-registry/amelia-chaltin-and-timber-rodriguez-chicago-il/4353870" target="_blank">Registry</a>
+        </li>
+        </ul>
+     </p>
+
+     <div class="spacer"></div>
+     <div class="spacer"></div>
+     <div class="spacer"></div>
+     <div class="spacer"></div>
+
+
     <h3 class="center-text">What is the Dress Code?</h3>
     <p class="center-text">Dress Code is Cunt! Serve us a fit hunty ;P Looking interesting is more important than looking fancy, but dress up as fabulously as you are comfortable.</p>
-    <div class="spacer"></div>
-    <h3 class="center-text">Where can I park?</h3>
-    <p class="center-text">The venue has parking.</p>
-    <div class="spacer"></div>
-    <h3 class="center-text">Can I bring my kids?</h3>
-    <p class="center-text">Our wedding will not be a child-friendly event. While we understand that may prevent some people from coming, we are not willing to censor ourselves and don't feel it will be appropriate for children to attend.</p>
-    <div class="spacer"></div>
-    <h3 class="center-text">Can I bring my partner/a date?</h3>
-    <p class="center-text">Unfortunately, we cannot accomodate plus ones. All invitees are listed on your invite.</p>
-    <div class="spacer"></div>
-    <h3 class="center-text">Can you accomodate dietary restrictions?</h3>
-    <p class="center-text">Please indicate your dietary restrictions in the RSVP form and we will make sure you can eat!</p>
-    <div class="spacer"></div>
-    <h3 class="center-text">Is the venue accessible?</h3>
-    <p class="center-text">There is a step at the entrance, and restrooms are down a flight of stairs.</p>
+
     <div class="spacer"></div>
     <h3 class="center-text">Will there be an open bar?</h3>
     <p class="center-text">Yes?. Wine will be served with dinner. Last call at ?pm</p>
 
-   <div class="spacer"></div>
+    <div class="spacer"></div>
+    <h3 class="center-text">Can I bring my kids?</h3>
+    <p class="center-text">Our wedding will not be a child-friendly event. While we understand that may prevent some people from coming, we are not willing to censor ourselves and don't feel it will be appropriate for children to attend.</p>
 
-   <p class="center-text">
-       <ul class="horizontal">
-           <li>
-            <a class="btn" href="../index.html">Home</a>
-           </li>
-        <li>
-            <a class="btn" href="../schedule/index.html">Schedule</a>
-        </li>
-        <li>
-           <a class="btn" href="../gallery/index.html">Gallery</a>
-       </li>
-       <li>
-           <a class="btn" href="../rsvp/index.html">RSVP</a>
-       </li>
-       <li>
-            <a class="btn" href="https://www.myregistry.com/wedding-registry/amelia-chaltin-and-timber-rodriguez-chicago-il/4353870" target="_blank">Registry</a>
-       </li>
-       </ul>
-    </p>
+    <div class="spacer"></div>
+    <h3 class="center-text">Can I bring my partner/a date?</h3>
+    <p class="center-text">Unfortunately, we cannot accomodate plus ones. All invitees are listed on your invite.</p>
+
+    <div class="spacer"></div>
+    <h3 class="center-text">Can you accomodate dietary restrictions?</h3>
+    <p class="center-text">Please indicate your dietary restrictions in the RSVP form and we will make sure you can eat!</p>
+
+    <div class="spacer"></div>
+    <h3 class="center-text">Is the venue accessible?</h3>
+    <p class="center-text">The venue is a single floor at street level.</p>
+
+    <div class="spacer"></div>
+    <h3 class="center-text">What rules does the venue have?</h3>
+    <p class="center-text">There is a small parking lot, but it is reserved for event staff. No smoking or vaping in the venue, back alley, or parking lot. Please keep volume down outside the venue to be respectful to neighbors. No gum is allowed. Only one person trained by the venue may touch the sound system. No pets are allowed. Underage drinking is not allowed (we will only have one guest under 21, but we'd be kicked out if underage drinking is suspected).</p>
+
+    <div class="spacer"></div>
+    <h3 class="center-text">Is public transit nearby?</h3>
+    <p class="center-text">Yes! There is an 80 Bus Stop less than a block from the venue. The 80 can be boarded from both the Irving Park Metra Stop and the Irving Park Blue Line Stop.</p>
+
+    <div class="spacer"></div>
+    <h3 class="center-text">Where can I park?</h3>
+    <p class="center-text">There is free street parking on the side streets, and paid street parking on Irving Park Road. You are also welcome to park near our home (street parking) and walk or take the bus from there if you are more comfortable doing so.</p>
+    <img class="center-img" src="../img/Venue-Parking-Map.png" alt="Map of Venue Parking, shows free parking on Spaulding and Christiana side streets and easy paid parking on Irving Park Road, as well as the 80 bus stop on the corner"/>
 
    </div>
 </body>
