--- a/gallery/index.html
+++ b/gallery/index.html
@@ -50,6 +50,8 @@
     <img class="column" src="../img/Halloween-1.jpg" alt="Timber & Amelia as Princess Daisy & Princess Peach for Halloween"/>
     <img class="column" src="../img/Halloween-2.jpg" alt="Timber & Amelia as Princess Daisy & Princess Peach for Halloween"/>
 
+    <img class="col-3" src="../img/BeachDay.JPG" alt="Timber & Amelia out at the beach"/>
+
    </div>
 </body>
 </html>
