--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <div class="page-container">
         <img class="logo-img" src="img/logo.png"/>
         <img class="title-img" src="img/Amelia-Timber.JPG" alt="Amelia & Timber at their favorite neighborhood restaurant"/>
-        <h2 class="center-text">July 13, 2025, 3-8 pm</h2>
-        <h2 class="center-text">Michelle's Ballroom</h2>
-        <h3 class="center-text">2800 W Belmont Ave, Chicago, IL 60618</h3>
+        <h2 class="center-text">July 12, 2025, 3-8 pm</h2>
+        <h2 class="center-text">Sway Dance Studio</h2>
+        <h3 class="center-text">3317 W Irving Park Rd, Chicago, IL 60618</h3>
+        <h3 class="center-text">Negative Covid Test Required</h3>
+
 
         <div class="spacer"></div>
 
