add alt text to title image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="page-container">
-        <img class="logo-img" src="img/logo.png"/>
+        <img class="logo-img" src="img/logo.png" alt="Title Image: Timber & Amelia's Gay Wedding"/>
         <img class="title-img" src="img/Amelia-Timber.JPG" alt="Amelia & Timber at their favorite neighborhood restaurant"/>
         <h2 class="center-text">July 12, 2025, 3-8 pm</h2>
         <h2 class="center-text">Sway Dance Studio</h2>
