Add captions to gallery images

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -36,21 +36,34 @@
     </p>
 
     <div class="spacer"></div>
+    <div class="spacer"></div>
+    <div class="spacer"></div>
 
     <img class="column" src="../img/Winter-1.JPG" alt="Amelia & Timber at Christkindlmarket"/>
     <img class="column" src="../img/Winter-2.JPG" alt="Amelia & Timber at Christkindlmarket with Paul"/>
+    <p class="caption center-text">Amelia & Timber at Christkindlmarket, featuring Paul the sailor statue</p>
 
     <img class="column" src="../img/Concert.JPG" alt="Amelia & Timber out at a concert"/>
     <img class="column" src="../img/First-Day-House.jpg" alt="Timber & Amelia's condo on the day they moved in"/>
+    <div class="column">
+        <p class="caption center-text">Amelia & Timber out at a concert</p>
+    </div>
+    <div class="column">
+        <p class="caption center-text">Timber & Amelia's condo on the day they moved in</p>
+    </div>
 
     <img class="col-3" src="../img/Christmas-1.JPG" alt="Timber & Amelia hosting their Christmas party"/>
     <img class="col-3" src="../img/Christmas-2.JPG" alt="Timber & Amelia hosting their Christmas party"/>
     <img class="col-3" src="../img/Christmas-3.JPG" alt="Timber & Amelia hosting their Christmas party"/>
+    <p class="caption center-text">Timber & Amelia hosting their Christmas party</p>
 
     <img class="column" src="../img/Halloween-1.jpg" alt="Timber & Amelia as Princess Daisy & Princess Peach for Halloween"/>
     <img class="column" src="../img/Halloween-2.jpg" alt="Timber & Amelia as Princess Daisy & Princess Peach for Halloween"/>
+    <p class="caption center-text">Timber & Amelia as Princess Daisy & Princess Peach for Halloween</p>
 
+    
     <img class="col-3" src="../img/BeachDay.JPG" alt="Timber & Amelia out at the beach"/>
+    <p class="caption center-text col-3">Timber & Amelia out at the beach</p>
 
    </div>
 </body>
