Update serif font to garamond

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -9,26 +9,26 @@
     <link rel="stylesheet" href="../css/mobile.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700" rel="stylesheet"></head>
 </head>
 <body>
    <div class="page-container">
     <h1 class="center-text">Schedule</h1>
 
     <div class="spacer"></div>
-    <h3 class="center-text">3pm Arrival</h3>
+    <h3 class="center-text">4:30pm Arrival</h3>
     <div class="spacer"></div>
-    <h3 class="center-text">3:15pm Ceremony</h3>
+    <h3 class="center-text">4:45pm Ceremony</h3>
     <div class="spacer"></div>
-    <h3 class="center-text">3:30pm Cocktails</h3>
+    <h3 class="center-text">5pm Cocktails</h3>
     <div class="spacer"></div>
-    <h3 class="center-text">4pm Dinner</h3>
+    <h3 class="center-text">6pm Dinner</h3>
     <div class="spacer"></div>
-    <h3 class="center-text">5:30pm Dancing</h3>
+    <h3 class="center-text">7:30pm Dancing</h3>
     <div class="spacer"></div>
-    <h3 class="center-text">7pm Last Call</h3>
+    <h3 class="center-text">9pm Last Call</h3>
     <div class="spacer"></div>
-    <h3 class="center-text">8pm Get Home Safe!</h3>
+    <h3 class="center-text">10pm Get Home Safe!</h3>
    <div class="spacer"></div>
 
    <p class="center-text">
