--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
     <link rel="stylesheet" href="css/mobile.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
-</head>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700" rel="stylesheet"></head>
 <body>
     <div class="page-container">
         <img class="logo-img" src="img/logo.png" alt="Title Image: Timber & Amelia's Gay Wedding"/>
         <img class="title-img" src="img/Amelia-Timber.JPG" alt="Amelia & Timber at their favorite neighborhood restaurant"/>
-        <h2 class="center-text">July 12, 2025, 3-8 pm</h2>
+        <h2 class="center-text">July 12, 2025, 4:30-10pm</h2>
         <h2 class="center-text">Sway Dance Studio</h2>
         <h3 class="center-text">3317 W Irving Park Rd, Chicago, IL 60618</h3>
         <h3 class="center-text">Negative Covid Test Required</h3>
