Add scanned polaroids

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -42,6 +42,19 @@
     <img class="column" src="../img/Winter-1.JPG" alt="Amelia & Timber at Christkindlmarket"/>
     <img class="column" src="../img/Winter-2.JPG" alt="Amelia & Timber at Christkindlmarket with Paul"/>
     <p class="caption center-text">Amelia & Timber at Christkindlmarket, featuring Paul the sailor statue</p>
+    
+    <img class="col-3" src="../img/BeachDay.JPG" alt="Timber & Amelia out at the beach"/>
+    <img class="col-3" src="../img/tna-joy.png" alt="Timber & Amelia at a party"/>
+    <img class="col-3" src="../img/tna-bowie.png" alt="Timber & Amelia on their couch"/>
+    <div class="col-3">
+        <p class="caption center-text">Timber & Amelia out at the beach</p>
+    </div>
+    <div class="col-3">
+        <p class="caption center-text">Timber & Amelia at a party</p>
+    </div>
+    <div class="col-3">
+        <p class="caption center-text">Timber & Amelia on their couch</p>
+    </div>
 
     <img class="column" src="../img/Concert.JPG" alt="Amelia & Timber out at a concert"/>
     <img class="column" src="../img/First-Day-House.jpg" alt="Timber & Amelia's condo on the day they moved in"/>
@@ -61,10 +74,13 @@
     <img class="column" src="../img/Halloween-2.jpg" alt="Timber & Amelia as Princess Daisy & Princess Peach for Halloween"/>
     <p class="caption center-text">Timber & Amelia as Princess Daisy & Princess Peach for Halloween</p>
 
-    
-    <img class="col-3" src="../img/BeachDay.JPG" alt="Timber & Amelia out at the beach"/>
-    <p class="caption center-text col-3">Timber & Amelia out at the beach</p>
+    <img class="col-1" src="../img/tna-christmas-1.png" alt="Amelia & Timber at a Christmas party"/>
+    <img class="col-1" src="../img/tna-christmas-2.png" alt="Amelia & Timber at a Christmas party"/>
+    <p class="caption center-text">Amelia & Timber at a work Christmas Party</p>
 
+    <img class="column" src="../img/tna-cowgirls-1.png" alt="Amelia & Timber hosting their pride party"/>
+    <img class="column" src="../img/tna-cowgirls-2.png" alt="Amelia & Timber hosting their pride party"/>
+    <p class="caption center-text">Amelia & Timber hosting their Cowgirls & Cow Girls Pride Party</p>
    </div>
 </body>
 </html>
