--- a/schedule/index.html
+++ b/schedule/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
    <div class="page-container">
-    <h1 class="center-text">Schedule</h1>
+    <h1 class="center-text">Tentative Schedule</h1>
 
     <div class="spacer"></div>
     <h3 class="center-text">4:30pm Arrival</h3>
