Add more descriptive alt text to gallery photos

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -39,13 +39,13 @@
     <div class="spacer"></div>
     <div class="spacer"></div>
 
-    <img class="column" src="../img/Winter-1.JPG" alt="Amelia & Timber at Christkindlmarket"/>
-    <img class="column" src="../img/Winter-2.JPG" alt="Amelia & Timber at Christkindlmarket with Paul"/>
+    <img class="column" src="../img/Winter-1.JPG" alt="Amelia & Timber at Christkindlmarket, smiling"/>
+    <img class="column" src="../img/Winter-2.JPG" alt="Amelia & Timber at Christkindlmarket, making odd expressions with Paul"/>
     <p class="caption center-text">Amelia & Timber at Christkindlmarket, featuring Paul the sailor statue</p>
     
-    <img class="col-3" src="../img/BeachDay.JPG" alt="Timber & Amelia out at the beach"/>
-    <img class="col-3" src="../img/tna-joy.png" alt="Timber & Amelia at a party"/>
-    <img class="col-3" src="../img/tna-bowie.png" alt="Timber & Amelia on their couch"/>
+    <img class="col-3" src="../img/BeachDay.JPG" alt="Timber & Amelia in beach hats and masks waiting for the bus"/>
+    <img class="col-3" src="../img/tna-joy.png" alt="Timber & Amelia dressed up at a party"/>
+    <img class="col-3" src="../img/tna-bowie.png" alt="Timber & Amelia kissing on their couch"/>
     <div class="col-3">
         <p class="caption center-text">Timber & Amelia out at the beach</p>
     </div>
@@ -56,8 +56,8 @@
         <p class="caption center-text">Timber & Amelia on their couch</p>
     </div>
 
-    <img class="column" src="../img/Concert.JPG" alt="Amelia & Timber out at a concert"/>
-    <img class="column" src="../img/First-Day-House.jpg" alt="Timber & Amelia's condo on the day they moved in"/>
+    <img class="column" src="../img/Concert.JPG" alt="Amelia & Timber in dark makeup out at a concert"/>
+    <img class="column" src="../img/First-Day-House.jpg" alt="Timber & Amelia's condo on the day they moved in, packed full of stuff including the bed in the corner of the living room"/>
     <div class="column">
         <p class="caption center-text">Amelia & Timber out at a concert</p>
     </div>
@@ -65,21 +65,21 @@
         <p class="caption center-text">Timber & Amelia's condo on the day they moved in</p>
     </div>
 
-    <img class="col-3" src="../img/Christmas-1.JPG" alt="Timber & Amelia hosting their Christmas party"/>
-    <img class="col-3" src="../img/Christmas-2.JPG" alt="Timber & Amelia hosting their Christmas party"/>
-    <img class="col-3" src="../img/Christmas-3.JPG" alt="Timber & Amelia hosting their Christmas party"/>
+    <img class="col-3" src="../img/Christmas-1.JPG" alt="Timber & Amelia hosting their Christmas party, smiling together in Sexy Santa outfits"/>
+    <img class="col-3" src="../img/Christmas-2.JPG" alt="Timber & Amelia hosting their Christmas party, Amelia kisses Timber's cheek"/>
+    <img class="col-3" src="../img/Christmas-3.JPG" alt="Timber & Amelia hosting their Christmas party, Timber kisses Amelia's cheek"/>
     <p class="caption center-text">Timber & Amelia hosting their Christmas party</p>
 
-    <img class="column" src="../img/Halloween-1.jpg" alt="Timber & Amelia as Princess Daisy & Princess Peach for Halloween"/>
-    <img class="column" src="../img/Halloween-2.jpg" alt="Timber & Amelia as Princess Daisy & Princess Peach for Halloween"/>
+    <img class="column" src="../img/Halloween-1.jpg" alt="Timber & Amelia as Princess Daisy & Princess Peach for Halloween, Timber kissing Amelia's forehead"/>
+    <img class="column" src="../img/Halloween-2.jpg" alt="Timber & Amelia as Princess Daisy & Princess Peach for Halloween, posing and smiling"/>
     <p class="caption center-text">Timber & Amelia as Princess Daisy & Princess Peach for Halloween</p>
 
-    <img class="col-1" src="../img/tna-christmas-1.png" alt="Amelia & Timber at a Christmas party"/>
-    <img class="col-1" src="../img/tna-christmas-2.png" alt="Amelia & Timber at a Christmas party"/>
+    <img class="col-1" src="../img/tna-christmas-1.png" alt="Photobooth of Amelia & Timber at a Christmas party: Timber is trying to do something, Amelia & smiling and not noticing"/>
+    <img class="col-1" src="../img/tna-christmas-2.png" alt="Photobooth of Amelia & Timber at a Christmas party: laughing and kissing, Amelia wiping her lipstick off Timber's cheek"/>
     <p class="caption center-text">Amelia & Timber at a work Christmas Party</p>
 
-    <img class="column" src="../img/tna-cowgirls-1.png" alt="Amelia & Timber hosting their pride party"/>
-    <img class="column" src="../img/tna-cowgirls-2.png" alt="Amelia & Timber hosting their pride party"/>
+    <img class="column" src="../img/tna-cowgirls-1.png" alt="Amelia & Timber hosting their pride party in cowgirl outfits and tiny cowboy hats, very drunk. Blunt smoking in the background"/>
+    <img class="column" src="../img/tna-cowgirls-2.png" alt="Amelia & Timber hosting their pride party, close up of how drunk we were"/>
     <p class="caption center-text">Amelia & Timber hosting their Cowgirls & Cow Girls Pride Party</p>
    </div>
 </body>
