Add heading images, remove rsvp reference for now

--- a/faq/index.html
+++ b/faq/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
    <div class="page-container">
-    <h1 class="center-text">FAQ</h1>
+    <img class="logo-img" src="../img/tna-wedding-faq-01.png" alt="Title Image: T&A's Gay Wedding FAQ"/>
     <div class="spacer"></div>
 
     <p class="center-text">
@@ -27,9 +27,9 @@
          <li>
             <a class="btn" href="../gallery/index.html">Gallery</a>
         </li>
-        <li>
+        <!-- <li>
             <a class="btn" href="../rsvp/index.html">RSVP</a>
-        </li>
+        </li> -->
         <li>
              <a class="btn" href="https://www.myregistry.com/wedding-registry/amelia-chaltin-and-timber-rodriguez-chicago-il/4353870" target="_blank">Registry</a>
         </li>
@@ -47,15 +47,15 @@
 
     <div class="spacer"></div>
     <h3 class="center-text">Will there be an open bar?</h3>
-    <p class="center-text">Yes?. Wine will be served with dinner. Last call at ?pm</p>
+    <p class="center-text">Yes. Wine will be served with dinner.</p>
 
     <div class="spacer"></div>
     <h3 class="center-text">Can I bring my kids?</h3>
-    <p class="center-text">Our wedding will not be a child-friendly event. While we understand that may prevent some people from coming, we are not willing to censor ourselves and don't feel it will be appropriate for children to attend.</p>
+    <p class="center-text">Our wedding will not be a child-friendly event. Come on, just look at this site. Dress code is cunt, we've got pictures of our bongs and cow bikinis, our playlist will be explicit. If you can't come due to this, we'd love to celebrate with you another time.</p>
 
     <div class="spacer"></div>
     <h3 class="center-text">Can I bring my partner/a date?</h3>
-    <p class="center-text">Unfortunately, we cannot accomodate plus ones. All invitees are listed on your invite.</p>
+    <p class="center-text">We have room for a limited number of plus ones, which we will give out on a first-come-first-serve basis. If you'd like a plus one, please reach out to either one of us and we will verify that we have space for your date. All we ask is that you do not bring any guests that are homophobic or transphobic. Thanks!</p>
 
     <div class="spacer"></div>
     <h3 class="center-text">Can you accomodate dietary restrictions?</h3>
