--- a/gallery/index.html
+++ b/gallery/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
    <div class="page-container">
-    <h1 class="center-text">Gallery</h1>
+    <img class="logo-img" src="../img/tna-wedding-gallery-01.png" alt="Title Image: T&A's Gay Wedding Gallery"/>
    <div class="spacer"></div>
    <p class="center-text">
        <ul class="horizontal">
@@ -26,9 +26,9 @@
         <li>
             <a class="btn" href="../schedule/index.html">Schedule</a>
         </li>
-       <li>
+       <!-- <li>
            <a class="btn" href="../rsvp/index.html">RSVP</a>
-       </li>
+       </li> -->
        <li>
             <a class="btn" href="https://www.myregistry.com/wedding-registry/amelia-chaltin-and-timber-rodriguez-chicago-il/4353870" target="_blank">Registry</a>
        </li>
