--- a/rsvp/index.html
+++ b/rsvp/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
    <div class="page-container">
-    <h1 class="center-text">RSVP</h1>
+    <img class="logo-img" src="../img/tna-wedding-rsvp-01.png" alt="Title Image: T&A's Gay Wedding RSVP"/>
    <div class="spacer"></div>
    <p class="center-text">
        <ul class="horizontal">
