--- a/schedule/index.html
+++ b/schedule/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
    <div class="page-container">
-    <h1 class="center-text">Tentative Schedule</h1>
+    <img class="logo-img" src="../img/tna-wedding-schedule-01.png" alt="Title Image: T&A's Gay Wedding Schedule"/>
+    <h3 class="center-text">Tentative Schedule - will be updated as the wedding approaches</h1>
 
     <div class="spacer"></div>
     <h3 class="center-text">4:30pm Arrival</h3>
@@ -42,9 +43,9 @@
         <li>
            <a class="btn" href="../gallery/index.html">Gallery</a>
        </li>
-       <li>
+       <!-- <li>
            <a class="btn" href="../rsvp/index.html">RSVP</a>
-       </li>
+       </li> -->
        <li>
             <a class="btn" href="https://www.myregistry.com/wedding-registry/amelia-chaltin-and-timber-rodriguez-chicago-il/4353870" target="_blank">Registry</a>
        </li>
