make faq more vague

--- a/faq/index.html
+++ b/faq/index.html
@@ -47,7 +47,7 @@
 
     <div class="spacer"></div>
     <h3 class="center-text">Will there be an open bar?</h3>
-    <p class="center-text">Yes. Wine will be served with dinner.</p>
+    <p class="center-text">That's the  plan!</p>
 
     <div class="spacer"></div>
     <h3 class="center-text">Can I bring my kids?</h3>
@@ -59,7 +59,7 @@
 
     <div class="spacer"></div>
     <h3 class="center-text">Can you accomodate dietary restrictions?</h3>
-    <p class="center-text">Please indicate your dietary restrictions in the RSVP form and we will make sure you can eat!</p>
+    <p class="center-text">Food isn't booked yet, please indicate your dietary restrictions in the RSVP (to come) form and we will make sure you can eat!</p>
 
     <div class="spacer"></div>
     <h3 class="center-text">Is the venue accessible?</h3>
