--- a/faq/index.html
+++ b/faq/index.html
@@ -55,7 +55,7 @@
 
     <div class="spacer"></div>
     <h3 class="center-text">Can I bring my partner/a date?</h3>
-    <p class="center-text">We have room for a limited number of plus ones, which we will give out on a first-come-first-serve basis. If you'd like a plus one, please reach out to either one of us and we will verify that we have space for your date. All we ask is that you do not bring any guests that are homophobic or transphobic. Thanks!</p>
+    <p class="center-text">We have room for a limited number of plus ones, which we will give out on a first-come-first-serve basis. If you'd like a plus one, please reach out to either one of us and we will verify that we have space for your date. All we ask is that you do not bring any guests that are racist, homophobic, transphobic, or fatphobic. Thanks!</p>
 
     <div class="spacer"></div>
     <h3 class="center-text">Can you accomodate dietary restrictions?</h3>
